...
    },
    "Add Download": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "添加下载"
          }
        }
      }
    },
    "Add Header": {
      "localizations": {
...
    },
    "Authors": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "作者"
          }
        }
      }
    },
    "Auto Redact": {
      "localizations": {
...
    },
    "Browse Web": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "访问网页"
          }
        }
      }
    },
    "Cancel": {
      "localizations": {
...
    },
    "Download": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "下载"
          }
        }
      }
    },
    "Downloading": {
      "localizations": {
...
    },
    "Enter URL": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "输入网址"
          }
        }
      }
    },
    "Enter a URL below to start browsing.": {
      "localizations": {
...
            "state": "translated",
            "value": "步长"
          }
        }
      }
    },
    "Swift Store": {},
    "Tap + to add a counter.": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "点击 + 添加一个计数器。"
...
            "state": "translated",
            "value": "工具"
          }
        }
      }
    },
    "URL": {},
    "Undo": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "撤销"
...
