...
}

#Preview {
    NavigationStack {
        SwiftStoreAppDetailView(app: StoreApp(
            id: "lanlu",
            name: "lanlu-iOS",
            description: "lanlu client for iOS",
            authors: ["copurx", "DeeChael"],
            aiAssisted: true,
            repo: URL(string: "https://github.com/DeeChael/lanlu-iOS")!,
            latestVersion: "v1.0.0",
            latestReleaseVersion: "v1.0.0"
...
